[B]2.6.7[/B]
- fixed: broken TMDB search results due to API changes for real

[B]2.6.6[/B]
- fixed: broken TMDB search results due to API changes

[B]2.6.5[/B]
- removed: trakttv

[B]2.6.4[/B]
- removed: option to scrape trailers from hd-trailers.net (it was broken)
- removed: option to scrape posters from IMPAwards (it was broken)
- removed: option to scrape posters from IMDb (it was broken)
- changed: settings clean-up (thanks to Miki)
- added: option to keep Original Title for TMDB (thanks to Miki)
- added: support for TMDB URLs in NFO files (thanks to Miki)
- added: preferred search language for TMDB (thanks to Miki)

[B]2.6.3[/B]
- fixed: broken tmdb search after API changes

[B]2.6.2[/B]
- updated language files from Transifex

[B]2.6.1[/B]
- updated language files from Transifex

[B]2.6.0[/B]
- added: support to get movieart from fanart.tv

[B]2.5.2[/B]
- updated language files from Transifex

[B]2.5.1[/B]
- updated: TMDb API URLs

[B]2.5.0[/B]
- added: support to save keywords as tags from TMDb

[B]2.4.5[/B]
- fixed: RT critics concensus won't be scraped as plot

[B]2.4.4[/B]
- Removed broken direct youtube trailer scraping

[B]2.4.3[/B]
- Changed poster and fanart priority

[B]2.4.2[/B]
- updated language files from Transifex

[B]2.4.1[/B]
- fixed: original title once again

[B]2.4.0[/B]
- added: option to perform full search on IMDb

[B]2.3.1[/B]
- fixed: properly implement option to insert IMDb Outline as plot

[B]2.3.0[/B]
- fixed: various original title fixes
- fixed: year won't scrape in certain cases
- added: option to insert IMDb Outline as plot

[B]2.2.0[/B]
- fixed: original title won't scrape
- fixed: year in case of TV Movies
- added: option to insert RT critics concensus as plot
- added: option to not scrape tagline

[B]2.1.9[/B]
- fixed: issue with original title

[B]2.1.8[/B]
- cosmetic: synced version number with Eden

[B]2.1.7[/B]
- changed: added 'Short' to search results

[B]2.1.6[/B]
- fixed: year won't scrape when using TMDb search
