@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="metadata.universal"
        name="Universal Movie Scraper"
-       version="2.6.7"
+       version="2.7.0"
        provider-name="Olympia, XBMC Foundation">
   <requires>
     <import addon="xbmc.metadata" version="2.1.0"/>
     <import addon="metadata.common.fanart.tv" version="3.1.0"/>
-    <import addon="metadata.common.imdb.com" version="2.7.8"/>
+    <import addon="metadata.common.imdb.com" version="2.8.0"/>
     <import addon="metadata.common.movieposterdb.com" version="1.1.1"/>
     <import addon="metadata.common.ofdb.de" version="1.0.3"/>
     <import addon="metadata.common.port.hu" version="1.0.3"/>
-    <import addon="metadata.common.rt.com" version="1.4.0"/>
+    <import addon="metadata.common.omdbapi.com" version="1.0.0"/>
     <import addon="metadata.common.themoviedb.org" version="2.12.1"/>
   </requires>
   <extension point="xbmc.metadata.scraper.movies"
